tests/ui/coercion/issue-73886.stderr
error[E0605]: non-primitive cast: `&&[i32; 1]` as `&[_]`
  --> $DIR/issue-73886.rs:2:13
   |
LL |     let _ = &&[0] as &[_];
   |             ^^^^^^^^^^^^^ an `as` expression can only be used to convert between primitive types or to coerce to a specific trait object
   |
   = note: casting reference expression `&&[0]` because `&` binds tighter than `as`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0605`.
